...
                        v!.contains('@') ? null : 'Invalid Email'),
                const SizedBox(height: 16),
                TextFormField(
                    controller: _phoneNumberController,
                    keyboardType: TextInputType.phone, // Apple QA Fix
                    decoration: const InputDecoration(
                        labelText: 'Mobile Number',
                        prefixIcon: Icon(LucideIcons.phone)),
                    validator: (v) =>
                        v!.length >= 10 ? null : 'Invalid Mobile'),
                const SizedBox(height: 16),

                // Security
...
