...

  List<Step> _getSteps(ApplicationState appState, dynamic establishmentState,
      ApplicationNotifier notifier) {
    List<Step> steps = [
      // Step 0: Select Establishment (Common)
      Step(
        title: const Text('Select Establishment'),
        content: establishmentState.establishments.isEmpty
            ? const Text('No establishments found. Please create one first.')
            : Column(
                children: establishmentState.establishments.map<Widget>((farm) {

                  return RadioListTile<String>(
...
