...
      onBack: () => context.go('/applications/create/step3'),
      onNext: () => context.go('/applications/create/step5'),
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          const Text(
            "4. ข้อมูลการผลิต (Product Details)",
            style: TextStyle(fontWeight: FontWeight.bold, fontSize: 18),
          ),
          const SizedBox(height: 20),
          Card(
            shape: RoundedRectangleBorder(
              side: BorderSide(color: Colors.grey[300]!),
...
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                  const Text("รายละเอียดพืช (Plant Details)",
                      style: TextStyle(fontWeight: FontWeight.bold)),
                  const SizedBox(height: 10),
                  WizardTextInput(
                    "ชื่อสายพันธุ์ (Strain Name)",
                    state.strainName,
                    (v) => notifier.update('strainName', v),
                  ),
                  WizardTextInput(
                    "แหล่งที่มาของเมล็ดพันธุ์ (Source Origin)",
                    state.sourceName, // Reusing sourceName
...
