...
      onBack: () => context.go('/applications/create/step1'),
      onNext: () => context.go('/applications/create/step3'),
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          const Text(
            "2. ข้อมูลผู้ยื่นคำขอ (Applicant Info)",
            style: TextStyle(fontWeight: FontWeight.bold, fontSize: 18),
          ),
          const SizedBox(height: 20),

          // Type Selection
          Card(
...
                      "เลขทะเบียนนิติบุคคล (Registration ID)",
                      state.regCode1,
                      (v) => notifier.update('regCode1', v),
                    ),
                  ],
                  WizardTextInput(
                    "ชื่อ-สกุล (Name - Surname)",
                    state.presidentName.isNotEmpty
                        ? state.presidentName
                        : state.entityName, // Fallback/Logic
                    (v) => notifier.update(
                        isJuristic ? 'presidentName' : 'entityName', v),
                  ),
...
